[gd_scene load_steps=17 format=4 uid="uid://bvm718ddfisd7"]

[ext_resource type="Script" uid="uid://oxbq6vk7mref" path="res://src/secenes/level/level.gd" id="1_sypop"]
[ext_resource type="Texture2D" uid="uid://det5m0b87c313" path="res://assets/sprites/world/forest-tiles.png" id="1_vbg06"]
[ext_resource type="Texture2D" uid="uid://dcmba8urs6sej" path="res://assets/sprites/world/tileset.png" id="3_j8j4h"]
[ext_resource type="Texture2D" uid="uid://riso1kxfjte0" path="res://assets/sprites/world/tile-types.png" id="3_lxq08"]
[ext_resource type="Texture2D" uid="uid://buy4t4epwwrhp" path="res://assets/sprites/world/rock-tiles-5tile.png" id="3_n86tn"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n86tn"]
texture = ExtResource("3_lxq08")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_n86tn"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_n86tn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qnuiv"]
texture = ExtResource("3_n86tn")
0:0/next_alternative_id = 5
0:0/0 = 0
0:0/1 = 1
0:0/1/flip_v = true
0:0/2 = 2
0:0/2/flip_h = true
0:0/3 = 3
0:0/3/flip_h = true
0:0/3/flip_v = true
0:1/next_alternative_id = 2
0:1/0 = 0
0:1/1 = 1
0:1/1/flip_v = true
0:2/next_alternative_id = 4
0:2/0 = 0
0:2/1 = 1
0:2/1/flip_h = true
0:2/2 = 2
0:2/2/flip_h = true
0:2/2/flip_v = true
0:2/2/transpose = true
0:2/3 = 3
0:2/3/flip_h = true
0:2/3/transpose = true
0:3/next_alternative_id = 4
0:3/0 = 0
0:3/1 = 1
0:3/1/flip_v = true
0:3/1/transpose = true
0:3/2 = 2
0:3/2/flip_h = true
0:3/2/flip_v = true
0:3/3 = 3
0:3/3/flip_v = true
0:4/0 = 0

[sub_resource type="TileSet" id="TileSet_qnuiv"]
sources/0 = SubResource("TileSetAtlasSource_qnuiv")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j8j4h"]
texture = ExtResource("1_vbg06")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
0:4/0 = 0
1:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0

[sub_resource type="TileSet" id="TileSet_lxq08"]
sources/0 = SubResource("TileSetAtlasSource_j8j4h")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_sypop"]
polygon = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sypop"]
texture = ExtResource("3_j8j4h")
1:0/0 = 0
2:0/0 = 0
2:0/0/occlusion_layer_0/polygon_0/polygon = SubResource("OccluderPolygon2D_sypop")
0:1/next_alternative_id = 4
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 4, 8, 4, 8, 8, -8, 8)
0:1/1 = 1
0:1/1/flip_v = true
0:1/1/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, -4, -8, -4)
0:1/2 = 2
0:1/2/flip_h = true
0:1/2/transpose = true
0:1/2/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -4, -8, -4, 8, -8, 8)
0:1/3 = 3
0:1/3/transpose = true
0:1/3/physics_layer_0/polygon_0/points = PackedVector2Array(4, -8, 8, -8, 8, 8, 4, 8)

[sub_resource type="TileSet" id="TileSet_j8j4h"]
occlusion_layer_0/light_mask = 1
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
sources/0 = SubResource("TileSetAtlasSource_sypop")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lxq08"]
texture = ExtResource("3_j8j4h")
0:0/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0

[sub_resource type="TileSet" id="TileSet_vbg06"]
sources/0 = SubResource("TileSetAtlasSource_lxq08")

[node name="Level" type="Node2D"]
script = ExtResource("1_sypop")

[node name="TerrainLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAUAAAAAAAAAAAACAAUAAAAAAAAAAAADAAUAAAAAAAAAAAAEAAUAAAAAAAAAAAAFAAUAAAAAAAAAAAAGAAUAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAUAAAAAAAAAAAAJAAUAAAAAAAAAAAAKAAUAAAAAAAAAAAALAAUAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAIAAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAAAAAAAAAAAAAAIAAEAAAAAAAAAAAAJAAEAAAAAAAAAAAAKAAEAAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAAKAAIAAAAAAAAAAAAJAAIAAAAAAAAAAAAIAAIAAAAAAAAAAAANAAAAAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAAMAAYAAAAAAAAAAAALAAYAAAAAAAAAAAAKAAYAAAAAAAAAAAAJAAYAAAAAAAAAAAAIAAYAAAAAAAAAAAAHAAYAAAAAAAAAAAAGAAYAAAAAAAAAAAAFAAYAAAAAAAAAAAAEAAYAAAAAAAAAAAADAAYAAAAAAAAAAAACAAYAAAAAAAAAAAABAAYAAAAAAAAAAAAAAAYAAAAAAAAAAAD//wYAAAAAAAAAAAD//wUAAAAAAAAAAAD//wQAAAAAAAAAAAD//wMAAAAAAAAAAAD//wIAAAAAAAAAAAD//wEAAAAAAAAAAAD//wAAAAAAAAAAAAAEAAgAAAAAAAAAAAAFAAgAAAAAAAAAAAAGAAgAAAAAAAAAAAAHAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAJAAgAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_n86tn")

[node name="VisualLayer" type="TileMapLayer" parent="TerrainLayer"]
position = Vector2(-8, -8)
tile_set = SubResource("TileSet_qnuiv")

[node name="SecretsLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_lxq08")

[node name="StaticLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_j8j4h")

[node name="ObjectsLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_vbg06")
